# JetsonYolo_Project

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
include/: README.md  common.hpp  cuda_utils.h  logging.h  people_counter.hpp  yolov5.hpp
models/: README.md
scripts/: README.md  build_engine.py  compare_fps.py  gen_wts.py
src/: README.md  main.cpp  main.py  people_counter.cpp  tracker.py  yolov5.cpp
src/src/: README.md  config.yaml  main.py  requirements.txt  sort.py  tracker.py
